--- a/optimization/requirements.txt
+++ b/optimization/requirements.txt
@@ -1,10 +1,7 @@
 python-dotenv
-openpyxl==3.0.10
 pyomo
-pandas
-openbox
-hiplot
-gurobipy
-munch
-pyxirr
-xlsxwriter
+# openpyxl==3.0.10
+numpy=1.21.1
+pandas=1.2.5
+requests=2.26.0
+# xlsxwriter
