--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,7 +49,9 @@
     ]
   },
   "devDependencies": {
+    "formik": "^2.2.9",
     "prettier": "2.7.1",
+    "react-select": "^5.5.6",
     "tailwindcss": "^3.1.8"
   }
 }
